# g8-dinero-oxidado

./: .gitignore  Cargo.toml  README.md  transacciones.csv
src/: AI.rs  cli.yml  cliente.rs  ia.rs  logger.rs  main.rs  procesador.rs  provedor_externo.rs  proveedor_externo.rs  simulacion.rs  transaccion.rs  worker.rs  worker_final.rs
