[package]
name = "dinero-oxidado"
version = "0.1.0"
authors = ["Lucho <sportelliluciano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
clap = {version = "~2.27.0", features = ["yaml"]}